--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "population_service",
+  "name": "@popsim/common",
   "version": "1.0.0",
-  "description": "Based on the BAG and CBS data, generate an initial population distribution, assigning people to houses.",
+  "description": "Common classes and definitions",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,11 +13,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/geojson": "^1.0.2",
-    "@types/kafka-node": "^1.3.2",
     "@types/node": "^7.0.18",
     "typescript": "^2.3.2"
   },
   "dependencies": {
-    "kafka-node": "^1.6.2"
   }
 }
