--- a/packages/cbs/package.json
+++ b/packages/cbs/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "cbs",
+  "name": "@popsim/cbs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "build": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
