--- a/packages/bag/package.json
+++ b/packages/bag/package.json
@@ -19,6 +19,7 @@
     "typescript": "^2.3.2"
   },
   "dependencies": {
+    "@popsim/common": "^1.0.0",
     "kafka-node": "^1.6.2",
     "pg": "^6.2.2"
   }
