--- a/packages/cbs/package.json
+++ b/packages/cbs/package.json
@@ -14,12 +14,13 @@
   "devDependencies": {
     "@types/geojson": "^1.0.2",
     "@types/kafka-node": "^1.3.2",
-    "@types/node": "^7.0.18",
+    "@types/node": "^7.0.27",
     "@types/pg": "^6.1.40",
-    "typescript": "^2.3.2"
+    "typescript": "^2.3.4"
   },
   "dependencies": {
     "@popsim/common": "^1.0.0",
+    "@turf/area": "^4.4.0",
     "kafka-node": "^1.6.2",
     "pg": "^6.2.2"
   }
