--- a/packages/wfs/package.json
+++ b/packages/wfs/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@types/geojson": "^1.0.2",
     "@types/kafka-node": "^1.3.2",
-    "@types/node": "^7.0.23",
+    "@types/node": "^7.0.27",
     "typescript": "^2.3.4"
   },
   "dependencies": {
     "@popsim/common": "^1.0.0",
+    "@turf/distance": "^4.4.0",
+    "@turf/area": "^4.4.0",
     "kafka-node": "^1.6.2"
   }
 }
