--- a/packages/pda/config/config.json
+++ b/packages/pda/config/config.json
@@ -1,123 +1,270 @@
 {
-  "logging": true,
-  "kafka": {
-    "clientId": "pdaSvc",
-    "host": "localhost:2181",
-    "subscription": {
-      "topics": [{
-        "topic": "pop2Channel",
-        "partition": 0
-      }, {
-        "topic": "wfsChannel",
-        "partition": 0
-      }, {
-        "topic": "simChannel",
-        "partition": 0
-      }],
-      "options": {
-        "autoCommit": false
-      }
-    },
-    "publication": {
-      "workforce": {
-        "topic": "wfs2Channel",
-        "partition": 0
-      },
-      "population": {
-        "topic": "pop3Channel",
-        "partition": 0
-      }
-    }
-  },
-  "statistics": {
-    "primarySchools": {
-      "schedule": {
-        "Mon": {
-          "starts": "08:30",
-          "ends": "14:45",
-          "breakFrom": "12:00",
-          "breakTill": "12:30"
+    "logging": true,
+    "kafka": {
+        "clientId": "pdaSvc",
+        "host": "localhost:2181",
+        "subscription": {
+            "topics": [{
+                "topic": "pop2Channel",
+                "partition": 0
+            }, {
+                "topic": "wfsChannel",
+                "partition": 0
+            }, {
+                "topic": "simChannel",
+                "partition": 0
+            }],
+            "options": {
+                "autoCommit": false,
+                "fetchMaxWaitMs": 1000,
+                "fetchMaxBytes": 30000000
+            }
         },
-        "Tue": {
-          "starts": "08:30",
-          "ends": "14:45",
-          "breakFrom": "12:00",
-          "breakTill": "12:30"
-        },
-        "Wed": {
-          "starts": "08:30",
-          "ends": "12:00"
-        },
-        "Thu": {
-          "starts": "08:30",
-          "ends": "14:45",
-          "breakFrom": "12:00",
-          "breakTill": "12:30"
-        },
-        "Fri": {
-          "starts": "08:30",
-          "ends": "14:45",
-          "breakFrom": "12:00",
-          "breakTill": "12:30"
+        "publication": {
+            "workforce": {
+                "topic": "wfs2Channel",
+                "partition": 0
+            },
+            "population": {
+                "topic": "pop3Channel",
+                "partition": 0
+            }
         }
-      }
+    },
+    "primarySchools": {
+        "schedule": {
+            "Mon": {
+                "starts": "08:30",
+                "ends": "14:45",
+                "breakFrom": "12:00",
+                "breakTill": "12:30"
+            },
+            "Tue": {
+                "starts": "08:30",
+                "ends": "14:45",
+                "breakFrom": "12:00",
+                "breakTill": "12:30"
+            },
+            "Wed": {
+                "starts": "08:30",
+                "ends": "12:00"
+            },
+            "Thu": {
+                "starts": "08:30",
+                "ends": "14:45",
+                "breakFrom": "12:00",
+                "breakTill": "12:30"
+            },
+            "Fri": {
+                "starts": "08:30",
+                "ends": "14:45",
+                "breakFrom": "12:00",
+                "breakTill": "12:30"
+            }
+        }
     },
     "secondarySchools": {
-      "schedule": {
-        "Mon": {
-          "starts": "08:30",
-          "ends": ["15:10", "16:00"]
-        },
-        "Tue": {
-          "starts": "08:30",
-          "ends": ["15:10", "16:00"]
-        },
-        "Wed": {
-          "starts": "08:30",
-          "ends": "13:00"
-        },
-        "Thu": {
-          "starts": "08:30",
-          "ends": ["15:10", "16:00"]
-        },
-        "Fri": {
-          "starts": "08:30",
-          "ends": ["15:10", "16:00"]
+        "schedule": {
+            "Mon": {
+                "starts": "08:30",
+                "ends": ["15:10", "16:00"]
+            },
+            "Tue": {
+                "starts": "08:30",
+                "ends": ["15:10", "16:00"]
+            },
+            "Wed": {
+                "starts": "08:30",
+                "ends": "13:00"
+            },
+            "Thu": {
+                "starts": "08:30",
+                "ends": ["15:10", "16:00"]
+            },
+            "Fri": {
+                "starts": "08:30",
+                "ends": ["15:10", "16:00"]
+            }
         }
-      }
     },
-    "accompanyChild": {
-      "toSchool": {
+    "transportation": {
         "policy": "first",
         "rules": [{
-          "action": "bringToSchool",
-          "conditions": [{
-            "property": "age",
-            "operator": "<",
-            "operand": 10
-          }]
+            "action": "assignTransportation",
+            "description": "Assign the mode of transport (car) and the travelling speed.",
+            "actionProperties": {
+                "speedKmh": 30,
+                "activityType": 3
+            },
+            "conditions": [{
+                "property": "travelDistance",
+                "operator": ">",
+                "operand": "5000"
+            }]
         }, {
-          "action": "bringToSchool",
-          "combinator": "AND",
-          "conditions": [{
-            "property": "age",
-            "operator": "<",
-            "operand": 12
-          }, {
-            "property": "distance",
-            "operator": ">",
-            "operand": 1000
-          }]
+            "action": "assignTransportation",
+            "description": "Assign the mode of transport (bicycle) and the travelling speed.",
+            "actionProperties": {
+                "speedKmh": 15,
+                "activityType": 2
+            },
+            "conditions": [{
+                "property": "travelDistance",
+                "operator": ">",
+                "operand": "1000"
+            }]
         }, {
-          "action": "bringToSchool",
-          "conditions": [{
-            "property": "distance",
-            "operator": ">",
-            "operand": 5000
-          }]
+            "action": "assignTransportation",
+            "description": "Assign the mode of transport (walk) and the travelling speed.",
+            "actionProperties": {
+                "speedKmh": 5,
+                "activityType": 1
+            },
+            "conditions": [{
+                "property": "age",
+                "operator": "<",
+                "operand": "35"
+            }]
+        }, {
+            "action": "assignTransportation",
+            "actionProperties": {
+                "speedKmh": 4.5,
+                "activityType": 1
+            },
+            "conditions": [{
+                "property": "age",
+                "operator": "<",
+                "operand": "45"
+            }]
+        }, {
+            "action": "assignTransportation",
+            "actionProperties": {
+                "speedKmh": 4,
+                "activityType": 1
+            },
+            "conditions": [{
+                "property": "age",
+                "operator": "<",
+                "operand": "50"
+            }]
+        }, {
+            "action": "assignTransportation",
+            "actionProperties": {
+                "speedKmh": 3,
+                "activityType": 1
+            },
+            "conditions": [{
+                "property": "age",
+                "operator": "<",
+                "operand": "60"
+            }, {
+                "action": "assignTransportation",
+                "description": "Default transportation, will always be triggered if no others are triggered first.",
+                "actionProperties": {
+                    "speedKmh": 2.5,
+                    "activityType": 1
+                }
+            }]
         }]
-      }
+    },
+    "work": {
+        "schedule": {
+            "policy": "first",
+            "rules": [{
+                "action": "assignHours",
+                "description": "When you work as an employee (role = 5) at a workplace (LocationType.workplace = 4), expect regular office hours.",
+                "actionProperties": {
+                    "startShift": ["08:30", "12:30"],
+                    "end": "17:30",
+                    "deltaStartMinutes": 60,
+                    "deltaDurationMinutes": 60,
+                    "partTimeRatio": 0.1,
+                    "maxWorkHours": [8.5, 5],
+                    "shiftRatios": [0.8, 1]
+                },
+                "combinator": "AND",
+                "conditions": [{
+                    "property": "locType",
+                    "operator": "===",
+                    "operand": 4
+                }, {
+                    "property": "role",
+                    "operator": "===",
+                    "operand": 5
+                }]
+            }, {
+                "action": "assignHours",
+                "description": "When you work as an employee (role = 5) at a shop (LocationType.shop = 7), expect shop hours.",
+                "actionProperties": {
+                    "startShift": ["08:30", "12:30", "18:30"],
+                    "end": "22:00",
+                    "deltaStartMinutes": 60,
+                    "deltaDurationMinutes": 60,
+                    "partTimeRatio": 0.8,
+                    "maxWorkHours": [8.5, 8.5, 4],
+                    "shiftRatios": [0.3, 0.8, 1]
+                },
+                "combinator": "AND",
+                "conditions": [{
+                    "property": "locType",
+                    "operator": "===",
+                    "operand": 7
+                }, {
+                    "property": "role",
+                    "operator": "===",
+                    "operand": 5
+                }]
+            }]
+        },
+        "maxWalkingDistance": 1000,
+        "maxCyclingDistance": 10000,
+        "walkingSpeedKmh": 5,
+        "cyclingSpeedKmh": 15,
+        "drivingSpeedKmh": 30
+    },
+    "accompanyChild": {
+        "maxWalkingDistance": 800,
+        "maxCyclingDistance": 5000,
+        "walkingSpeedKmh": 3,
+        "cyclingSpeedKmh": 10,
+        "drivingSpeedKmh": 30,
+        "toSchool": {
+            "policy": "first",
+            "rules": [{
+                "action": "bringToSchool",
+                "conditions": [{
+                    "property": "age",
+                    "operator": "<",
+                    "operand": 10
+                }, {
+                    "property": "age",
+                    "operator": ">",
+                    "operand": 3
+                }]
+            }, {
+                "action": "bringToSchool",
+                "combinator": "AND",
+                "conditions": [{
+                    "property": "age",
+                    "operator": "<",
+                    "operand": 12
+                }, {
+                    "property": "age",
+                    "operator": ">",
+                    "operand": 3
+                }, {
+                    "property": "distance",
+                    "operator": ">",
+                    "operand": 1000
+                }]
+            }, {
+                "action": "bringToSchool",
+                "conditions": [{
+                    "property": "distance",
+                    "operator": ">",
+                    "operand": 6000
+                }]
+            }]
+        }
     }
-  },
-  "outerBboxDelta": [0.5, 1]
 }
