PDA produces two messages: a list of persons (IPersonsMsg) with a simple agenda (going to work and bringing children to school), and a list of activities.

--- a/packages/gui/config/config.json
+++ b/packages/gui/config/config.json
@@ -13,9 +13,16 @@
       }, {
         "topic": "popChannel",
         "partition": 0
+      }, {
+        "topic": "activitiesChannel",
+        "partition": 0
+      }, {
+        "topic": "personsChannel",
+        "partition": 0
       }],
       "options": {
-        "autoCommit": false
+        "autoCommit": false,
+        "fetchMaxBytes": 100000000
       }
     },
     "_subscription": {
