--- a/packages/pda/package.json
+++ b/packages/pda/package.json
@@ -4,7 +4,7 @@
     "description": "Personal Digital Assistant: Based on the population and workforce data, generate agenda's for every person.",
     "main": "dist/index.js",
     "scripts": {
-        "startX": "node dist/index.js",
+        "start": "node dist/index.js",
         "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
