--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "@popsim/common",
-  "version": "1.0.0",
-  "description": "Common classes and definitions",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/geojson": "^1.0.2",
-    "@types/node": "^7.0.27",
-    "typescript": "^2.3.4"
-  },
-  "dependencies": {
-  }
+    "name": "@popsim/common",
+    "version": "1.0.0",
+    "description": "Common classes and definitions",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "start": "node dist/index.js",
+        "build": "tsc -w",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/geojson": "^1.0.2",
+        "@types/node": "^8.0.11",
+        "typescript": "^2.4.1"
+    },
+    "dependencies": {}
 }
