--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "popsim",
-  "version": "v0.0.1",
-  "scripts": {
-    "install": "lerna bootstrap --hoist",
-    "build": "lerna run build --parallel",
-    "start": "lerna run start --parallel",
-    "stop": "lerna run stop",
-    "up": "lerna run up",
-    "ps": "lerna run ps",
-    "restart": "lerna run stop && lerna run clean && lerna run up",
-    "clean": "lerna run stop && lerna run clean"
-  },
-  "devDependencies": {
-    "lerna": "^2.0.0-rc.5"
-  }
+    "name": "popsim",
+    "version": "v0.0.1",
+    "scripts": {
+        "install": "lerna bootstrap --hoist",
+        "build": "lerna run build --parallel",
+        "start": "lerna run start --parallel",
+        "stop": "lerna run stop",
+        "up": "lerna run up",
+        "ps": "lerna run ps",
+        "restart": "lerna run stop && lerna run clean && lerna run up",
+        "clean": "lerna run stop && lerna run clean"
+    },
+    "devDependencies": {
+        "lerna": "^2.1.0"
+    }
 }
