--- a/packages/nav/package.json
+++ b/packages/nav/package.json
@@ -15,7 +15,8 @@
         "@types/geojson": "^1.0.2",
         "@types/kafka-node": "^1.3.5",
         "@types/node": "^8.0.13",
-        "@types/request": "^0.0.47",
+        "@types/request": "^2.0.0",
+        "@types/osmtogeojson": "2.2.29",
         "typescript": "^2.4.1"
     },
     "dependencies": {
@@ -23,6 +24,7 @@
         "@popsim/rules": "^0.0.1",
         "kafka-node": "^2.0.1",
         "@turf/union": "^4.5.2",
-        "request": "^2.81.0"
+        "request": "^2.81.0",
+        "osmtogeojson": "^3.0.0-beta.2"
     }
 }
