Added navigation graph creation using Overpass API.

--- a/packages/nav/config/config.json
+++ b/packages/nav/config/config.json
@@ -44,6 +44,10 @@
             }
         },
         "publication": {
+            "map": {
+                "topic": "mapChannel",
+                "partition": 0
+            },
             "nav": {
                 "topic": "navChannel",
                 "partition": 0
