--- a/packages/kafka/docker-compose.yml
+++ b/packages/kafka/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '2'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper
+    image: confluentinc/cp-zookeeper:3.2.1
     hostname: zookeeper
     extra_hosts:
     - "moby:127.0.0.1"
@@ -13,7 +13,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   broker:
-    image: confluentinc/cp-kafka
+    image: confluentinc/cp-kafka:3.2.1
     hostname: broker
     extra_hosts:
     - "moby:127.0.0.1"
@@ -30,7 +30,7 @@ services:
       KAFKA_REPLICA_FETCH_MAX_BYTES: 100000000
 
   schema_registry:
-    image: confluentinc/cp-schema-registry
+    image: confluentinc/cp-schema-registry:3.2.1
     hostname: schema_registry
     # extra_hosts:
     # - "moby:127.0.0.1"
@@ -44,7 +44,7 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
 
   kafka-rest:
-    image: confluentinc/cp-kafka-rest
+    image: confluentinc/cp-kafka-rest:3.2.1
     container_name: kafka-rest
     extra_hosts:
     - "moby:127.0.0.1"
