Do not cache download apk.

--- a/packages/sim/docker/base/Dockerfile
+++ b/packages/sim/docker/base/Dockerfile
@@ -8,7 +8,7 @@ MAINTAINER Erik Vullings <erik.vullings@gmail.com>
 
 RUN apk update && \
     apk upgrade && \
-    apk --update add \
+    apk --update --no-cache add \
         gcc \
         g++ \
         build-base \
