--- a/packages/cbs/package.json
+++ b/packages/cbs/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node dist/index.js",
+        "compile": "tsc",
         "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,16 +13,16 @@
     "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
     "license": "MIT",
     "devDependencies": {
-        "@types/geojson": "^1.0.2",
-        "@types/kafka-node": "^1.3.5",
-        "@types/node": "^8.0.13",
-        "@types/pg": "^6.1.42",
-        "typescript": "^2.4.1"
+        "@types/geojson": "^1.0.3",
+        "@types/kafka-node": "^2.0.3",
+        "@types/node": "^8.0.29",
+        "@types/pg": "^7.1.2",
+        "typescript": "^2.5.2"
     },
     "dependencies": {
-        "@turf/area": "^4.5.2",
+        "@turf/area": "^4.7.3",
         "@popsim/common": "^1.0.0",
-        "kafka-node": "^2.0.1",
-        "pg": "^6.4.0"
+        "kafka-node": "^2.2.3",
+        "pg": "^7.3.0"
     }
 }
