--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,16 +6,16 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "start": "node dist/index.js",
-        "build": "tsc -w",
+        "compile": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
     "license": "MIT",
     "devDependencies": {
-        "@types/geojson": "^1.0.2",
-        "@types/node": "^8.0.13",
-        "typescript": "^2.4.1"
+        "@types/geojson": "^1.0.3",
+        "@types/node": "^8.0.29",
+        "typescript": "^2.5.2"
     },
     "dependencies": {}
 }
