--- a/packages/nav/package.json
+++ b/packages/nav/package.json
@@ -5,6 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "startX": "node dist/index.js",
+        "compile": "tsc",
         "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,19 +13,19 @@
     "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
     "license": "MIT",
     "devDependencies": {
-        "@types/geojson": "^1.0.2",
-        "@types/kafka-node": "^1.3.5",
-        "@types/node": "^8.0.13",
-        "@types/request": "^2.0.0",
+        "@types/geojson": "^1.0.3",
+        "@types/kafka-node": "^2.0.3",
+        "@types/node": "^8.0.29",
+        "@types/request": "^2.0.3",
         "@types/osmtogeojson": "2.2.29",
-        "typescript": "^2.4.1"
+        "typescript": "^2.5.2"
     },
     "dependencies": {
         "@popsim/common": "^1.0.0",
         "@popsim/rules": "^0.0.1",
-        "kafka-node": "^2.0.1",
-        "@turf/union": "^4.5.2",
-        "request": "^2.81.0",
+        "kafka-node": "^2.2.3",
+        "@turf/union": "^4.7.3",
+        "request": "^2.82.0",
         "osmtogeojson": "^3.0.0-beta.2"
     }
 }
