--- a/packages/pop/package.json
+++ b/packages/pop/package.json
@@ -5,6 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "start": "node dist/index.js",
+        "compile": "tsc",
         "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,13 +13,13 @@
     "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
     "license": "MIT",
     "devDependencies": {
-        "@types/geojson": "^1.0.2",
-        "@types/kafka-node": "^1.3.5",
-        "@types/node": "^8.0.13",
-        "typescript": "^2.4.1"
+        "@types/geojson": "^1.0.3",
+        "@types/kafka-node": "^2.0.3",
+        "@types/node": "^8.0.29",
+        "typescript": "^2.5.2"
     },
     "dependencies": {
         "@popsim/common": "^1.0.0",
-        "kafka-node": "^2.0.1"
+        "kafka-node": "^2.2.3"
     }
 }
