--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -5,6 +5,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "compile": "tsc",
         "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,8 +13,8 @@
     "author": "Erik Vullings <erik.vullings@gmail.com> (http://www.tno.nl)",
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^8.0.13",
-        "typescript": "^2.4.1"
+        "@types/node": "^8.0.29",
+        "typescript": "^2.5.2"
     },
     "dependencies": {}
 }
