--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "v0.0.1",
     "scripts": {
         "install": "lerna bootstrap --hoist",
+        "compilelibs": "lerna run compilelibs --parallel",
         "compile": "lerna run compile --parallel",
         "build": "lerna run build --parallel",
         "start": "lerna run start --parallel",
