--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,7 +6,9 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "start": "node dist/index.js",
+        "compilelibs": "tsc",
         "compile": "tsc",
+        "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
