--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "clean": "lerna run stop && lerna run clean"
     },
     "devDependencies": {
-        "lerna": "^2.2.0"
+        "lerna": "^2.2.0",
+        "@types/geojson": "^1.0.3"
     }
 }
