Fix; npm requires a ./dist/index.js as the main starting point instead of a dist/index.js (on linux)

--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -2,8 +2,8 @@
     "name": "@popsim/rules",
     "version": "0.0.1",
     "description": "Simple rule engine to add behaviour to the agents",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "scripts": {
         "compile": "tsc",
         "build": "tsc -w",
