--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,8 +2,8 @@
     "name": "@popsim/common",
     "version": "1.0.0",
     "description": "Common classes and definitions",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "scripts": {
         "compilelibs": "tsc",
         "build": "tsc -w",
