--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -5,7 +5,7 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "compile": "tsc",
+        "compilelibs": "tsc",
         "build": "tsc -w",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
