Sending time to topic timeChannel as ISO8601 string.

--- a/packages/gui/config/config.json
+++ b/packages/gui/config/config.json
@@ -22,6 +22,9 @@
             }, {
                 "topic": "crowdChannel",
                 "partition": 0
+            }, {
+                "topic": "timeChannel",
+                "partition": 0
             }],
             "options": {
                 "autoCommit": false,
